--- a/WhereForLunch/en.lproj/MainStoryboard.storyboard
+++ b/WhereForLunch/en.lproj/MainStoryboard.storyboard
@@ -85,7 +85,13 @@
                             <navigationBar contentMode="scaleToFill" barStyle="blackOpaque" translatesAutoresizingMaskIntoConstraints="NO" id="SJ5-ce-vIN">
                                 <color key="backgroundColor" red="0.89019607840000003" green="0.24439194533872791" blue="0.37004874788189868" alpha="1" colorSpace="calibratedRGB"/>
                                 <items>
-                                    <navigationItem title="Get Lunch!" id="KgB-eu-wCn"/>
+                                    <navigationItem title="Get Lunch!" id="KgB-eu-wCn">
+                                        <barButtonItem key="leftBarButtonItem" image="menuButton.png" style="plain" id="NMP-n0-0Vy">
+                                            <connections>
+                                                <action selector="revealMenu:" destination="ie6-ND-wZF" id="tKs-lw-X4k"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
                                 </items>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="string" keyPath="nuiClass" value="TopBar"/>
@@ -179,6 +185,9 @@
             <point key="canvasLocation" x="942" y="101"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="menuButton.png" width="30" height="20"/>
+    </resources>
     <classes>
         <class className="ECSlidingViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ECSlidingViewController.h"/>
